# 2simply_dlc_manager

./: .gitignore  BUILD_GUIDE.md  HTTP2_PHASE1_SUMMARY.md  README.md  build.py  build.spec  build_multiplatform.py  check_integration.py  create_proper_icon.py  main.py  pyproject.toml  requirements.txt  requirements_http2.txt  run.py  setup.py  test_http2.py
core/: __init__.py  compression.py  downloader.py  models.py  network.py  persistence.py  resume.py  utils.py  verification.py
docs/: PERSISTENCE_FIX.md
resources/: resources.qrc  style.qss
resources/icons/: app_icon.icns
tests/: __init__.py  run_tests.py  test_asyncio.py  test_buttons.py  test_compression_optimization.py  test_core.py  test_download.py  test_fix.py  test_gui.py  test_http2.py  test_optimized_strategy.py  test_parallel_md5.py  test_performance_optimization.py  test_user_data.py  test_verify_failed_status.py
ui/: __init__.py  about_dialog.py  file_table_model.py  main_window.py
utils/: __init__.py  bloom_filter.py  exception_handler.py
